# image-processing

./: .gitignore  .gitignroe  README.md  aqua.yaml  pyproject.toml  requirements.txt
.github/workflows/: docs.yml  main.yml
fortran_training/: generate_portrait.sh  get-commandline.f90  read_pnm.f90  test.f90
src/: compressing.f08  display_img.f90  filtering.f90  generate_pgm.sh  generate_pnm.sh  get-queue.sh  gradation_processing.f90  image_to_pnm.sh  laplacian.f90  makefile  pnm_tools.f90  posterization.f08  preview.f90  run.f90  save_pnm.f90
