[project]
name = "image-processing"
version = "0.1.0"
description = "Add your description here"
dependencies = [
    "FORD>=7.0.6",
    "fprettify>=0.3.7",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
use-uv = true
dev-dependencies = []

[tool.rye.scripts]
fmt = "fprettify -i 2 -r src/"
doc = "ford README.md"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/image_processing"]
